sumo/tests/sumo/output/e2/errors/length_too_high/errors.sumo
Error: Detector's '4/1to3/1' end lies beyond lane's '4/1to3/1_0' end.
Quitting (on error).
